# rust

./: README.md
api/: Cargo.toml  test.rest
api/src/: main.rs
api/www/: index.js
apitest/: Cargo.toml  Dockerfile  bench copy.html  readme
apitest/src/: main.rs
oracledb/: Cargo.toml  readme.md
oracledb/src/: main.rs
pdf/: Cargo.toml
pdf/src/: main.rs
serdetest/: Cargo.toml
serdetest/src/: main.rs
sql/: Cargo.toml
sql/src/: main.rs
strings/: Cargo.toml
strings/src/: main.rs
