[package]
name = "apitest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
async-stream = "0.3.3"
json = "0.12.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
oracle = "0.5"
r2d2 = "0.8.10"
dotenv = "0.15.0"
chrono = "0.4.22"
r2d2-oracle = { version = "0.6.0", features = ["chrono"] }
actix-cors = "0.6.4"
