[package]
name = "ora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = "0.5"
r2d2 = "0.8.10"
serde_json = "1.0.83"
dotenv = "0.15.0"
chrono = "0.4.22"
r2d2-oracle = { version = "0.5.0", features = ["chrono"] }