[package]
name = "pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdb = { version = "0.9", optional = true }
svg2pdf = { version = "0.4.1", features = ["cli"] }
usvg = { version = "0.22", default-features = false }
